# chalkraw-rs

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml  release.yml
crates/chalkraw-catalog/: Cargo.toml
crates/chalkraw-catalog/src/: catalog.rs  collections.rs  edits.rs  error.rs  lib.rs  photos.rs  presets.rs  watermarks.rs
crates/chalkraw-catalog/tests/: round_trip.rs
crates/chalkraw-core/: Cargo.toml
crates/chalkraw-core/src/: collection.rs  edit.rs  lib.rs  photo.rs  watermark.rs
crates/chalkraw-export/: Cargo.toml
crates/chalkraw-export/src/: lib.rs  text.rs
crates/chalkraw-export/tests/: batch.rs  single.rs
crates/chalkraw-io/: Cargo.toml
crates/chalkraw-io/examples/: gen_fixture.rs
crates/chalkraw-io/src/: decode.rs  error.rs  lib.rs
crates/chalkraw-render/: Cargo.toml
crates/chalkraw-render/shaders/: bilateral.wgsl  develop.wgsl  gaussian_blur.wgsl
crates/chalkraw-render/src/: bilateral.rs  blur.rs  device.rs  display_profile.rs  error.rs  lib.rs  pipeline.rs  readback.rs  source.rs  uniforms.rs
crates/chalkraw-render/tests/: develop.rs  exposure.rs
crates/chalkraw-ui/: Cargo.toml
crates/chalkraw-ui/src/: app.rs  canvas.rs  main.rs  panels.rs
docs/superpowers/plans/: 2026-05-23-chalkraw-rs-foundation.md  2026-05-30-library-develop-usability.md
docs/superpowers/specs/: 2026-05-23-chalkraw-rs-design.md
