[package]
name = "chalkraw-catalog"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
chalkraw-core = { workspace = true }
redb = { workspace = true }
bincode = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
