[package]
name = "chalkraw-export"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
chalkraw-core = { workspace = true }
chalkraw-render = { workspace = true }
chalkraw-io = { workspace = true }
image = { workspace = true }
wgpu = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
image = { workspace = true }
chalkraw-io = { workspace = true }
chalkraw-core = { workspace = true }
chalkraw-render = { workspace = true }
