[package]
name = "chalkraw-io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
chalkraw-core = { workspace = true }
image = { workspace = true }
kamadak-exif = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
