[package]
name = "chalkraw-render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
chalkraw-core = { workspace = true }
wgpu = { workspace = true }
bytemuck = { workspace = true }
pollster = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
