[package]
name = "chalkraw-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "chalkraw"
path = "src/main.rs"

[dependencies]
chalkraw-core = { workspace = true }
chalkraw-io = { workspace = true }
chalkraw-catalog = { workspace = true }
chalkraw-render = { workspace = true }
chalkraw-export = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
egui-wgpu = { workspace = true }
wgpu = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
image = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
blake3 = { workspace = true }
rfd = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
